--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav id="nav">
             <ul>
                 <li><a href="#intro" class="active">Introducción</a></li>
-                <li><a href="#locacion">Ubicación</a></li>
+                <!-- <li><a href="#locacion">Ubicación</a></li> -->
                 <li><a href="#second">Tips</a></li>
                 <!-- <li><a href="#cta">Álbum</a></li> -->
             </ul>
@@ -28,7 +28,7 @@
         <div id="main">
             <section id="intro">
                 <p>
-                    La Facultad de Ciencias Económicas y de Administración presenta Defiesta, la campaña que impulsa los festejos de egreso responsables en la institución. Esta propuesta surge a partir de la necesidad de fomentar el cuidado del espacio físico de la facultad y la mejora de la convivencia.
+                    La Facultad de Ciencias Económicas y de Administración presenta <i><b>Defiesta</b></i> , la campaña que impulsa los festejos de egreso responsables en la institución. Esta propuesta surge a partir de la necesidad de fomentar el cuidado del espacio físico de la facultad y la mejora de la convivencia.
                 </p>
                 <p>
                     Celebrar sin corromper ni intervenir el espacio público, respetar el orden y cuidar la limpieza del mismo son las razones por las cuales se habilita un espacio de uso común, especial y adaptado para que las egresadas y los egresados de FCEA puedan festejar en un lugar cómodo y espacioso pensado estrictamente para dicha finalidad.
@@ -37,37 +37,61 @@
                     La propuesta de reubicación reside en la necesidad de cuidar tanto el exterior como el interior del edificio de aquellos productos arrojados que dejan suciedad y mal olor y que son difíciles de limpiar, con el objetivo de respetar un espacio que pertenece a todas y todos, y cuidar el barrio.
                 </p>
             </section>
-            <section id="locacion">
+            <!-- <section id="locacion">
                 <div class="container">
                     <h3>Ubicación</h3>
                     <img src="https://vignette.wikia.nocookie.net/zelda/images/2/26/Link_Artwork_LAR.png/revision/latest?cb=20191015020845&path-prefix=es" alt="">
                 </div>
-            </section>
-            <section id="media">
+            </section> -->
+            <!-- <section id="media">
                 <h3>Fotos</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi totam expedita, numquam nemo magni iste officia quidem cum ullam vero sequi necessitatibus commodi rem reprehenderit. Iure, a quas. Corrupti, molestias.</p>
+            </section> -->
+            <section id="tips">
+                <div class="escena">
+                    <div class="card" onclick="flip(event)">
+                        <div class="card_face card_face_front">
+                            Front
+                        </div>
+                        <div class="card_face card_face_back">
+                            Back
+                        </div>
+                    </div>
+                </div>
+                <div class="escena">
+                    <div class="card" onclick="flip(event)">
+                        <div class="card_face card_face_front">
+                            Front
+                        </div>
+                        <div class="card_face card_face_back">
+                            Back
+                        </div>
+                    </div>
+                </div>
+                <div class="escena">
+                    <div class="card" onclick="flip(event)">
+                        <div class="card_face card_face_front">
+                            Front
+                        </div>
+                        <div class="card_face card_face_back">
+                            Back
+                        </div>
+                    </div>
+                </div>
+                <div class="escena">
+                    <div class="card" onclick="flip(event)">
+                        <div class="card_face card_face_front">
+                            Front
+                        </div>
+                        <div class="card_face card_face_back">
+                            Back
+                        </div>
+                    </div>
+                </div>
+              
             </section>
-            <section class="galeria">
-                <div class="escena">
-                    <div class="card">
-                        <div class="card_face card_face_front">
-                            Front
-                        </div>
-                        <div class="card_face card_face_back">
-                            Back
-                        </div>
-                    </div>
-                </div>
-                <div class="escena">
-                    <div class="card">
-                        <div class="card_face card_face_front">
-                            Front
-                        </div>
-                        <div class="card_face card_face_back">
-                            Back
-                        </div>
-                    </div>
-                </div>
+            <section id="contacto">
+                
             </section>
         </div>
          <!-- Footer -->
